[CALCITE-6387] Make Arrow adapter passing tests with jdk17+